<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhoWasCNS531</string>
    <string name="set_button_text_view">Set</string>
    <string name="dialog_text_view">Choose your starting date for your first cycle.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Second</string>
    <string name="second_screen_text_view">Second Screen</string>
    <string name="back_text_view">Back</string>
    <string name="reset_text_view">Reset</string>
    <string name="training_maxes_title">Training Max</string>
    <string name="bench_training_max_title">Bench</string>
    <string name="squat_training_max_title">Squat</string>
    <string name="OHP_training_max">OHP</string>
    <string name="dead_training_max">Deadlift</string>
    <string name="schedule_creation_text_view">Create schedule</string>
    <string name="sync_with_calendar_text_view">Sync</string>
    <string name="clear_database_text_view">Clear</string>
    <string name="email_text_view">Export to email</string>
    <string name="blank_text_view"></string>
    <string name="Number_of_cycles_text_view">Cycles to project:</string>
    <string name="lb_radio_button">Lbs</string>
    <string name="kg_radio_button">Kgs</string>
    <string name="lb_kg_text_view">Lb/Kg:</string>
    <string name="unit_mode_text_view">Mode:</string>
    <string name="rounding_checkbox_text">Round to nearest 5lb/2.5kg?</string>

    <string-array name="cycles_array">
        <item>1</item>
-                                                                                                        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="options_checkbox_test">Configure</string>
    <string name="view_existing_text_view">View existing projection</string>
    <string name="date_text_test">XX-XX-XXXX</string>
    <string name="cycle_text_test">Cycle: #</string>
    <string name="weight_text_test">###</string>
    <string name="mode_text_test">Mode: lbs</string>
    <string name="fourtyfive_text_test">45s needed: X</string>
    <string name="thirtyfive_text_test">35s needed: X</string>
    <string name="twentyfive_text_test">25s needed: X</string>
    <string name="ten_text_test">10s needed: X</string>
    <string name="five_text_test">5s needed: X</string>
    <string name="twopointfive_text_test">2.5s needed: X</string>
    <string name="onepointtwofive_text_test">1.25s needed: X</string>
    <string name="lift_one_tv">Lift 1</string>
    <string name="lift_two_tv">Lift 2</string>
    <string name="lift_three_tv">Lift 3</string>
    <string name="lift_type">Lift Type</string>
    <string name="base_barbell_desc">Base barbell</string>
    <string name="date_column">Date</string>
    <string name="cycle_column">Cycle</string>
    <string name="lift_column">Lift</string>
    <string name="freq_column">Freq</string>
    <string name="first_lift_column">1st</string>
    <string name="second_lift_column">2nd</string>
    <string name="third_lift_column">3rd</string>
    <string name="training_maxes_text_test">Training maxes go here</string>
    <string name="adjust_lift_pattern_text_view">Adjust Lift Pattern</string>
    <string name="title_activity_adjust_lift_pattern">AdjustLiftPatternActivity</string>
    <string name="current_lift_pattern_text_view">Current Lift Pattern: B - S - R - O - D - R</string>
    <string name="option_1">Bench</string>
    <string name="option_2">Squat</string>
    <string name="option_3">OHP</string>
    <string name="option_4">Deadlift</string>
    <string name="option_5">Rest</string>
    <string name="choice_1">First</string>
    <string name="choice_2">Second</string>
    <string name="choice_3">Third</string>
    <string name="choice_4">Fourth</string>
    <string name="choice_5">Fifth</string>
    <string name="choice_6">Sixth</string>
    <string name="choice_7">Seventh</string>

    <!-- Button title definitoins -->
    <string name="AdjustActivity_Back">Back</string>
    <string name="AdjustActivity_Custom">Custom</string>
    <string name="AdjustActivity_Save">Save</string>

    <!-- Spinner contents definition -->

    <string-array name="Pattern_Size_Array">
        <item>Pattern size</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>7 days</item>
    </string-array>

    <string name="title_activity_individual_views">IndividualViews</string>
    <string name="typeFreq">Bench - 5/5/5</string>
    <string name="title_activity_tabbed_individual_view">TabbedIndividualVIew</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Create new projection</string>
    <string name="title_section3">View existing projection</string>
    <string name="title_section4">Test nav drawer</string>
    <string name="sampleentry">Lift X: 300x5!</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string-array name="items">
        <item>Dashboard</item>
        <item>Create new projection</item>
        <item>View existing projection</item>
    </string-array>

    <string name="title_activity_test_nav_drawer">TestNavDrawerActivity</string>
    <string name="pattern_size">Patern size</string>
    <string name="title_activity_test_nav_drawer_activity_two">TestNavDrawerActivityTwo</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Arrays for navdrawer -->
    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>Create New Projection</item>
        <item>View Exisiting Projection</item>
        <item>About</item>
        <item>Settings</item>
        <item>Testing arena</item>
        <!-- <item>Sixth</item> -->
    </string-array>
    <!-- Nav drawer icons that correspond to each navdrawer array entry -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <!-- -<item>@drawable/ic_launcher</item> -->

    </array>

    <string name="title_activity_revampedsecond_screen">REVAMPEDSecondScreenActivity</string>
    <string name="title_activity_about531">About531</string>
    <string name="about_placeholder">About 5/3/1 will go here</string>
    <string name="settings_placeholder">Setings will go here</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_opening_dashboard">OpeningDashboardActivity</string>
    <string name="opening_dash_placeholder">Dashboard placeholder</string>
    <string name="Pounds">Pounds</string>
    <string name="Kilograms">Kilograms</string>
    <string name="title_activity_third_screen_prototype">ThirdScreenPrototype</string>
    <string name="hello_world">Hello world!</string>

    <!-- Strings for third screen prototype -->
    <string name="cycle1">1</string>
    <string name="cycle2">2</string>
    <string name="cycle3">3</string>
    <string name="cycle4">4</string>
    <string name="cycle5">5</string>
    <string name="title_activity_individual_views_prototype">IndividualViewsPrototype</string>
    <string name="title_activity_collection_demo">CollectionDemoActivity</string>

</resources>
