<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/individualView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uitest.IndividualView"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/modeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/cycleTextView"
        android:layout_centerVertical="true"
        android:text="@string/mode_text_test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/platesNeeded5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/platesNeeded6"
        android:layout_below="@+id/platesNeeded6"
        android:layout_centerHorizontal="true"
        android:text="@string/thirtyfive_text_test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/platesNeeded4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/platesNeeded5"
        android:layout_below="@+id/platesNeeded5"
        android:layout_centerHorizontal="true"
        android:text="@string/twentyfive_text_test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/platesNeeded3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/platesNeeded4"
        android:layout_below="@+id/platesNeeded4"
        android:layout_centerHorizontal="true"
        android:text="@string/ten_text_test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/platesNeeded2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/platesNeeded3"
        android:layout_centerHorizontal="true"
        android:text="@string/five_text_test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/platesNeeded1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/platesNeeded3"
        android:layout_below="@+id/platesNeeded2"
        android:layout_centerHorizontal="true"
        android:text="@string/twopointfive_text_test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/platesNeeded6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modeTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/fourtyfive_text_test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/liftTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightTextView"
        android:layout_centerHorizontal="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cycleTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/weight_text_test"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cycleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/cycle_text_test"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barbell"
        android:layout_centerHorizontal="true"
        android:text="@string/date_text_test"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/barbell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/barbell_fortyfives" />

    <TextView
        android:id="@+id/liftNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lift_one_tv"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>