<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/zyzzbirdmdpi"
     >
    
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >
        <!-- Put what you want as your normal screen in here, you can also choose for a linear layout or any other layout, whatever you prefer -->
        
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/zyzzbirdmdpi"
    >

    <TextView
        android:id="@+id/dialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_view" />

    <DatePicker
        android:id="@+id/dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/set"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/set_button_text_view" />

    <Button
        android:id="@+id/existingProjectionButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/view_existing_text_view" />

    <Button
        android:id="@+id/adjustPatternButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/adjust_lift_pattern_text_view" />

    <TextView
        android:id="@+id/liftTicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_lift_pattern_text_view" />

</LinearLayout>
        
        
    </FrameLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:textColor="#a6a6a6"
        android:background="#a6a6a6"/>
</android.support.v4.widget.DrawerLayout>


       <!--   android:divider="@android:color/transparent" (was in listview) -->




